evaluation/test_suite/negative/ub09/2.c
#include <stdlib.h>
#include <stdio.h>

int main()
{
    int* p = (int*)malloc(sizeof(int));
    *p = 1;
    printf("%d\n", *p);
    free(p);
}
